# undump-aya

./: .gitignore  Cargo.toml  README.md
undump-aya/: Cargo.toml
undump-aya-common/: Cargo.toml
undump-aya-common/src/: lib.rs
undump-aya-ebpf/: Cargo.toml
undump-aya-ebpf/src/: kernel_bindings.rs  main.rs
undump-aya/src/: main.rs
xtask/: Cargo.toml
xtask/src/: build_ebpf.rs  run.rs
